--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -279,6 +279,36 @@
       >
     {%- endif -%}
 
+    <style>
+      @font-face {
+        font-family: "Satoshi";
+        font-weight: 500;
+        font-style: normal;
+        font-display: swap;
+        src: url('{{ "Satoshi-Medium.otf" | asset_url | font_url }}')
+            format("opentype"),
+          url('{{ "Satoshi-Medium.woff2" | asset_url  | font_url}}')
+            format("woff2"),
+          url('{{ "Satoshi-Medium.woff" | asset_url }}') format("woff"),
+          url('{{ "Satoshi-Medium.ttf" | asset_url }}') format('truetype');
+      }
+
+      @font-face {
+        font-family: "Satoshi";
+        font-weight: 700;
+        font-style: normal;
+        font-display: swap;
+        src: url('{{ "Satoshi-Bold.otf" | asset_url }}')
+            format("opentype"),
+          url('{{ "Satoshi-Bold.woff2" | asset_url }}')
+            format("woff2"),
+          url('{{ "Satoshi-Bold.woff" | asset_url }}') format("woff"),
+          url('{{ "Satoshi-Bold.ttf" | asset_url }}') format('truetype');
+      }
+    </style>
+    <script src="{{ 'x-index.js' | asset_url }}" type="module"></script>
+    {{ 'x-index.css' | asset_url | stylesheet_tag }}
+
     <script>
       if (Shopify.designMode) {
         document.documentElement.classList.add('shopify-design-mode');
