--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,22 +1,50 @@
 :root{
   --color-black: #000;
   --color-white: #fff;
-  --color-primary: #28a100;
+  --color-red: #E35249;
+  --color-orange: #EAAB6D;
 
-  --color-netural-100: #F1F1F0;
-  --color-netural-200: #F0F0EE;
-  --color-netural-300: #EDECEB;
-  --color-netural-400: #E7E6E6;
-  --color-netural-500: #DAD9D9;
-  --color-netural-600: #b9bbb4ff;
-  --color-netural-700: #b4b3acff;
-  --color-netural-800: #a5a29dff;
-  --color-netural-900: #85827fff;
+
+  --color-netural-300: #D9D9D9;
+  --color-netural-600: #5B5B5B;
 
   --color-font: var(--color-black);
-  --color-card: var(--color-netural-100);
   --color-price: var(--color-black);
   --color-price-sale: var(--color-primary);
+  --color-star: var(--color-orange);
+
+  --font-main: "Satoshi";
+
+  --width-content: 1440px;
+}
+
+body{
+  font-family: var(--font-main);
+}
+
+.content-wrapper{
+  max-width: var(--width-content);
+  margin: 0 auto;
+  padding: 0 16px;
+}
+
+@media(min-width: 1000px){
+  .content-wrapper{
+    padding: 0 100px;
+  }
+}
+
+.x-button{
+  display: inline-block;
+  padding: 19px;
+  font-family: var(--font-main);
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 700;
+  color: var(--color-white);
+  background: var(--color-black);
+  cursor: pointer;
+  border: none;
 }
 
 
